--- a/public/globals.css
+++ b/public/globals.css
@@ -1,42 +1,33 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  background-color: #FEE5A0 ;
+  font-family: 'Afacad-Regular', sans-serif;
+
+}
+@font-face {
+  font-family: 'Afacad-Regular';
+  src: url('/fonts/Afacad-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+  font-family: 'Afacad-Bold';
+  src: url('/fonts/Afacad-Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+@font-face {
+  font-family: 'Afacad-Medium';
+  src: url('/fonts/Afacad-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+@font-face {
+  font-family: 'Afacad-SemiBold';
+  src: url('/fonts/Afacad-SemiBold.ttf') format('truetype');
+  font-weight: 600;
+  font-style: normal;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
