--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,7 +1,11 @@
-div.navbox{
-    display: flex;
-    height:fit-content;
-    width:  auto;
-    justify-content: space-between;
-    padding: 10px 40px 10px 40px;
-  }
+div.navbox {
+  display: flex;
+  position: absolute;
+  height: fit-content;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.logo {
+  padding: 10px 40px;
+}
