--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -1,8 +1,9 @@
 .selectionContainer {
   display: flex;
   justify-content: center;
-  padding-top: 30px;
+  padding: 35px 10px 0 10px;
   gap: 8%;
+  cursor: url('../../public/handCursor.ico'), pointer;
 }
 
 .selectionContainer button {
@@ -32,7 +33,9 @@
   color: black;
   font-family: inherit;
 }
-
+button {
+  text-align: center;
+}
 .nonactive {
   font-weight: 500;
   color: gray;
@@ -40,37 +43,25 @@
 
 .menuSection {
   width: 70%;
-  margin: 5% auto; /* Center the section */
+  margin: 5% auto;
   display: grid;
 }
 
-.menuItem {
-  width: 60%;
-  margin-bottom: 20px;
-  position: relative;
-}
-
-/* Left-aligned items */
 .leftAlign {
   text-align: left;
-  align-content: right;
-  left: 55%;
 }
-
-/* Right-aligned items */
+.menuItemHeader {
+  text-wrap: nowrap;
+}
 .rightAlign {
   text-align: right;
-  width: 40%;
 }
 
-/* Green leaf icon for vegan items */
 .leafIcon {
   margin-left: 10px;
   width: 20px;
   height: 20px;
 }
-
-/* Random position shift for each item */
 .menuItem {
   position: relative;
   padding-bottom: 20px;
@@ -80,6 +71,56 @@
 .ingridients {
   width: 40%;
   text-align: inherit;
-  right: inherit;
-  left: inherit;
+}
+
+@media (max-width: 1150px) {
+  .selectionContainer {
+    padding-top: 10%;
+    font-size: resposive;
+  }
+}
+@media (max-width: 780px) {
+  .selectionContainer {
+    padding-top: 20%;
+  }
+  .menuSection {
+    width: 95%;
+    justify-items: center;
+  }
+}
+@media (max-width: 560px) {
+  button.active,
+  button.nonactive {
+    font-size: 20px;
+  }
+  p {
+    font-size: 15px;
+  }
+  textpath,
+  tspan {
+    font-size: 13px;
+  }
+}
+@media (max-width: 470px) {
+  .selectionContainer {
+    padding-top: 25%;
+  }
+  button.active,
+  button.nonactive {
+    font-size: 19px;
+  }
+}
+@media (max-width: 430px) {
+  .selectionContainer {
+    padding-top: 25%;
+  }
+  button.active,
+  button.nonactive {
+    font-size: 15px;
+  }
+}
+@media (max-width: 270px) {
+  .selectionContainer {
+    padding-top: 35%;
+  }
 }
