--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -2,10 +2,16 @@ div.navbox {
   display: flex;
   position: absolute;
   height: fit-content;
+  padding-top: 10px;
   width: 100%;
   justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
   padding: 10px 40px;
+}
+.clickable {
+  cursor: url('../../public/handCursor.ico'), pointer;
+  max-width: 120px;
 }
